added dashboard features

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,41 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.trigger {
+  font-size: 18px;
+  line-height: 64px;
+  padding: 0 24px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
+
+.trigger:hover {
+  color: #1890ff;
+}
+
+
+nz-layout {
+  height: 100vh;
+}
+
+nz-header {
+  background: #fff;
+  padding: 0;
+}
+
+nz-content {
+  margin: 15px 15px 0;
+  border-radius: 8px;
+}
+
+.inner-content {
+  padding: 10px;
+  background: #fff;
+  /* height: 100%; */
+  overflow-y: scroll;
+}
+
+nz-footer {
+  text-align: center;
+}
