--- a/src/app/pages/landing-page/timeline/timeline.component.html
+++ b/src/app/pages/landing-page/timeline/timeline.component.html
@@ -10,8 +10,13 @@
     <h2>Course timeline for {{ selectedMonth }} month</h2>
     <nz-timeline *ngIf="selectedMonth == 'first'" nzMode="alternate">
       <nz-timeline-item nzColor="green" *ngFor="let item of firstMonthTimeline">
-        <nz-card [nzBordered]="false" [nzTitle]="item.text1" nzSize="small">
-          {{ item.text2 }} {{ item.id }}
+        <nz-card
+          [nzBordered]="false"
+          [nzTitle]="item.text1"
+          nzSize="small"
+          class="courseInfo"
+        >
+          {{ item.text2 }}
         </nz-card>
       </nz-timeline-item>
     </nz-timeline>
@@ -20,14 +25,24 @@
         nzColor="green"
         *ngFor="let item of secondMonthTimeline"
       >
-        <nz-card [nzBordered]="false" [nzTitle]="item.text1" nzSize="small">
+        <nz-card
+          [nzBordered]="false"
+          [nzTitle]="item.text1"
+          nzSize="small"
+          class="courseInfo"
+        >
           {{ item.text2 }}
         </nz-card>
       </nz-timeline-item>
     </nz-timeline>
     <nz-timeline *ngIf="selectedMonth == 'third'" nzMode="alternate">
       <nz-timeline-item nzColor="green" *ngFor="let item of thirdMonthTimeline">
-        <nz-card [nzBordered]="false" [nzTitle]="item.text1" nzSize="small">
+        <nz-card
+          [nzBordered]="false"
+          [nzTitle]="item.text1"
+          nzSize="small"
+          class="courseInfo"
+        >
           {{ item.text2 }}
         </nz-card>
       </nz-timeline-item>
