cpu details guage chart implementation

--- a/src/app/pages/dashboard/home/home.component.html
+++ b/src/app/pages/dashboard/home/home.component.html
@@ -19,12 +19,9 @@
     <nz-card style="border-top: 4px solid rgb(255, 255, 0, 0.5)"></nz-card>
   </div>
   <div nz-col nzSpan="8">
-    <nz-card
-      nzTitle="CPU DETAILS"
-      style="border-top: 4px solid rgb(0, 0, 255, 0.5)"
-    >
-      <div id="chartdiv"></div>
-    </nz-card>
+    
+      <div id="chartdiv" class="cpuDetails"></div>
+  
   </div>
   <div nz-col nzSpan="24"></div>
 </div>
